fix double border in panel table

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -9069,9 +9069,6 @@ table.dataTable {
   float: right;
 }
 /* make full width and height when inside panel */
-.panel-info .dataTables_wrapper {
-  margin: -15px;
-}
 .highlight-panel .dataTables_wrapper {
   margin: -15px;
 }
@@ -9083,6 +9080,14 @@ table.dataTable {
 .highlight-panel table.dataTable {
   border-right: none;
   border-left: none;
+}
+.panel-info .dataTables_wrapper {
+  margin: -15px;
+}
+.panel-info table.dataTable {
+  border-right: none;
+  border-left: none;
+  border-bottom: none;
 }
 .panel-info .dataTables_filter label,
 .highlight-panel .dataTables_filter label {
